# MNN-

./: CMakeLists.txt  MNN_Batch_demo.cpp  readme.md
